# manga_backend

./: .clang-format  CMakeLists.txt  Dockerfile
MangaBackend/: CMakeLists.txt  Database.h  MangaDatabase.cpp  MangaDatabase.h  Query.cpp  Query.h  QueryRouter.cpp  QueryRouter.h  QueryRouterBase.h  Server.cpp  Server.h  Session.cpp  Session.h  Structs.cpp  Structs.h  Utils.h  main.cpp
MangaBackend/utility/: Base64.h
